--- a/FourInARow.csproj
+++ b/FourInARow.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Board.cs" />
-    <Compile Include="FieldState.cs" />
+    <Compile Include="NewFolder1\Board.cs" />
+    <Compile Include="NewFolder1\FieldState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
